Feat: Added Splash
can now visit splash page!

--- a/client/index.html
+++ b/client/index.html
@@ -7,5 +7,6 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.0.7/angular-material.min.css">
 </head>
 <body>
-  <event-main></event-main>
+	<navigation></navigation>
+  	<splash></splash>
 </body>
