Feat: Events database
Events now accessible in a database view

--- a/imports/ui/event_components/eventImage/eventImage.html
+++ b/imports/ui/event_components/eventImage/eventImage.html
@@ -1,1 +1,1 @@
-<img ng-src="{{eventImage.mainImage | displayImageFilter}}"/>
+<img style="height:100%" ng-src="{{eventImage.mainImage | displayImageFilter}}"/>
