--- a/imports/ui/splash_components/splashIndex/web.html
+++ b/imports/ui/splash_components/splashIndex/web.html
@@ -11,7 +11,7 @@
             <button id="heroesOnTheWater-button18" class=" button button-positive  button-block ">Volunteer</button>
         </div>
         <div class="spacer" style="height: 100px;"></div>
-        <events-list></events-list>
+        <events-db></events-db>
         <h1 id="heroesOnTheWater-heading11" style="color:#000000;" class=" ">Events</h1>
         <ion-list id="heroesOnTheWater-list2" class=" ">
             <ion-item class="item-thumbnail-left  " id="heroesOnTheWater-list-item5" ui-sref="tabsController.calendar">
