--- a/imports/ui/inventory_components/inventoryAdd/inventoryAdd.html
+++ b/imports/ui/inventory_components/inventoryAdd/inventoryAdd.html
@@ -9,7 +9,7 @@
     <label>
       Description:
     </label>
-    <input type="text" ng-model="inventoryAdd.event.description"/>
+    <input type="text" ng-model="inventoryAdd.inventory.description"/>
   </md-input-container>
   <div flex>
     <md-checkbox ng-model="inventoryAdd.inventory">
