--- a/imports/ui/inventory_components/inventoryDetails/inventoryDetails.html
+++ b/imports/ui/inventory_components/inventoryDetails/inventoryDetails.html
@@ -21,6 +21,6 @@
         <md-button ng-click="inventoryDetails.save()" class="md-primary md-raised">Save</md-button>
       </div>
     </form>
-    <event-map flex="50" location="inventoryDetails.inventory.location"></event-map>
+    <inventory-map flex="50" location="inventoryDetails.inventory.location"></inventory-map>
   </div>
 </div>
