--- a/imports/ui/inventory_components/inventoryAddButton/inventoryAddModal.html
+++ b/imports/ui/inventory_components/inventoryAddButton/inventoryAddModal.html
@@ -1,7 +1,7 @@
 <md-dialog aria-label="New inventory" ng-cloak>
   <md-toolbar>
     <div class="md-toolbar-tools">
-      <h2>New event</h2>
+      <h2>New inventory</h2>
       <span flex></span>
       <md-button ng-click="inventoryAddModal.close()">
         Close
@@ -10,7 +10,7 @@
   </md-toolbar>
   <md-dialog-content>
     <div class="md-dialog-content">
-      <event-add done="inventoryAddModal.close()"></inventory-add>
+      <inventory-add done="inventoryAddModal.close()"></inventory-add>
     </div>
   </md-dialog-content>
 </md-dialog>
