Inventory Files Revisions

--- a/imports/ui/inventory_components/inventoryAddButton/inventoryAddModal.html
+++ b/imports/ui/inventory_components/inventoryAddButton/inventoryAddModal.html
@@ -1,4 +1,4 @@
-<md-dialog aria-label="New inventory" ng-cloak>
+<md-dialog aria-label="New inventory item" ng-cloak>
   <md-toolbar>
     <div class="md-toolbar-tools">
       <h2>New inventory</h2>
