--- a/imports/ui/inventory_components/inventoryDetails/inventoryDetails.html
+++ b/imports/ui/inventory_components/inventoryDetails/inventoryDetails.html
@@ -12,7 +12,7 @@
       </md-input-container>
 
       <div>
-        <md-checkbox ng-model="inventoryDetails.inventory.public" ng-disabled="!inventoryDetails.isLoggedIn">
+        <md-checkbox ng-model="inventoryDetails.inventory" ng-disabled="!inventoryDetails.isLoggedIn">
           
         </md>
       </div>
