Feat: Signup/Volunteer/Cancel events
Users can signup for event when logged in or not, volunteers can sign
up if logged in, and anyone can cancel

--- a/imports/ui/dossier_components/dossierDetails/dossierDetails.html
+++ b/imports/ui/dossier_components/dossierDetails/dossierDetails.html
@@ -27,3 +27,15 @@
       </md-card>
 
 
+      <div>
+      <p>sajhdakj213131</p>
+      <ul ng-repeat="event in dossierDetails.events | filter: { rsvps.rsvp: 'yes' }" >
+      <li>{{event.name}}</li>
+      <li>{{event}}</li>
+      <li>sadkjsdklajs</li>
+      </ul>
+
+<dossier-uninvited flex event="dossierDetails.event" ></dossier-uninvited>
+      </div>
+
+
