--- a/imports/ui/event_components/eventsList/web.html
+++ b/imports/ui/event_components/eventsList/web.html
@@ -42,7 +42,7 @@
           <event-creator event="event"></event-creator>
         </md-card-content>
         <md-card-actions>
-          <event-rsvp event="event" ng-show="eventsList.isLoggedIn"></event-rsvp>
+          <event-rsvp event="event" ></event-rsvp>
           <div ng-hide="eventsList.isLoggedIn">
             <i>Sign in to RSVP for this event.</i>
           </div>
