--- a/imports/ui/event_components/eventAttendees/eventAttendees.html
+++ b/imports/ui/event_components/eventAttendees/eventAttendees.html
@@ -1,5 +1,5 @@
 <p>
   <small>
-    Attended by:<br><span ng-repeat="name in eventAttendees.attendants">{{name}}<br></span>
+    <span ng-repeat="name in eventAttendees.list">{{name}}<br></span>
   </small>
 </p>
