--- a/imports/ui/event_components/eventsDb/web.html
+++ b/imports/ui/event_components/eventsDb/web.html
@@ -38,9 +38,10 @@
         <td> {{event.description}} </td>
         <td> {{event.address}} </td>
         <td> {{event.resources}} </td>
-        <td> <event-attendees event="event"></event-attendees> </td>
+        <td> <event-attendees event="event" attendtype="'vol'"></event-attendees> </td>
         <td> <event-creator event="event"></event-creator> </td>
-        <td> {{event.attendants}} </td>
+        <td> <event-attendees event="event" attendtype="'yes'"></event-attendees> </td>
+        <td> <event-attendees event="event" attendtype="'can'"></event-attendees> </td>
         <td> {{event.chapter}} </td>
         <td><div style="height:80px" ng-if="event.images">
               <event-image images="event.images"></event-image>
