--- a/imports/ui/dossier_components/dossierDetails/dossierDetails.html
+++ b/imports/ui/dossier_components/dossierDetails/dossierDetails.html
@@ -1,7 +1,7 @@
 <div layout="column" layout-padding>
   <div layout="column" layout-gt-sm="row"  layout-padding>
 
-
+<div>
      <md-card md-theme="{{ showDarkTheme ? 'dark-grey' : 'default' }}" md-theme-watch>
         <md-card-title>
           <md-card-title-text>
@@ -25,17 +25,38 @@
           <md-button>Action 2</md-button>
         </md-card-actions>
       </md-card>
+</div>
+<div>
 
+<div ng-if="dossierDetails.dateWarn()"> Yes </div>
 
-      <div>
-      <p>sajhdakj213131</p>
-      <ul ng-repeat="event in dossierDetails.events | filter: { rsvps.rsvp: 'yes' }" >
-      <li>{{event.name}}</li>
-      <li>{{event}}</li>
-      <li>sadkjsdklajs</li>
-      </ul>
+      <label>Confirmed</label>
+        <div ng-repeat="event in dossierDetails.eventsY">
+        <p> · · · · · · · · · · · · · · · · · · · · </p>
+        <p> <md-button ui-sref="eventDetails({ eventId: event._id })" >{{event.name}} </md-button></p>
+        <p> {{event.description}} </p>
+        <p> {{event.date | date: "EEEE, MMMM d, y @ h:mm:ss a"}} </p>
+        <p ng-if="dossierDetails.dateWarn(event.date) > 1"> {{dossierDetails.dateWarn(event.date)}} Days until the event</p>
+        <p ng-if="dossierDetails.dateWarn(event.date) == 1"> The event is today!</p>
+        <p> <event-rsvp event="event" ></event-rsvp> </p>
+        </div>
 
-<dossier-uninvited flex event="dossierDetails.event" ></dossier-uninvited>
-      </div>
+      <label>Volunteered</label>
+        <div ng-repeat="event in dossierDetails.eventsV">
+        <p> · · · · · · · · · · · · · · · · · · · · </p>
+        <p> <md-button ui-sref="eventDetails({ eventId: event._id })" >{{event.name}} </md-button></p>
+        <p> {{event.description}} </p>
+        <p> {{event.date}} </p>
+        <p> <event-rsvp event="event" ></event-rsvp> </p>
+        </div>
 
+      <label>Cancelled</label>
+        <div ng-repeat="event in dossierDetails.eventsC">
+        <p> · · · · · · · · · · · · · · · · · · · · </p>
+        <p> <md-button ui-sref="eventDetails({ eventId: event._id })" >{{event.name}} </md-button></p>
+        <p> {{event.description}} </p>
+        <p> {{event.date}} </p>
+        <p> <event-rsvp event="event" ></event-rsvp> </p>
+        </div>
+ </div>
 
