--- a/imports/ui/dossier_components/dossiersList/dossierModifyModal.html
+++ b/imports/ui/dossier_components/dossiersList/dossierModifyModal.html
@@ -1,7 +1,7 @@
 <md-dialog aria-label="New dossier" ng-cloak>
   <md-toolbar>
     <div class="md-toolbar-tools">
-      <h2>New dossier</h2>
+      <h2>Edit User Profile</h2>
       <span flex></span>
       <md-button ng-click="dossierModifyModal.close()">
         Close
@@ -10,7 +10,9 @@
   </md-toolbar>
   <md-dialog-content>
     <div class="md-dialog-content">
-      <dossier-modify done="dossierModifyModal.close()" passed="dossierModifyModal.getval()" ></dossier-modify>
+
+<dossier-modify done="dossierModifyModal.close()" passed="dossierModifyModal.getval()" ></dossier-modify>
+
     </div>
   </md-dialog-content>
 </md-dialog>
