--- a/imports/ui/dossier_components/dossierDetails/dossierDetails.html
+++ b/imports/ui/dossier_components/dossierDetails/dossierDetails.html
@@ -22,14 +22,11 @@
         </md-card-content>
         <md-card-actions layout="row" layout-align="end center">
           <md-button ng-click="dossierDetails.open({ userId: dossierDetails.user._id })" class="md-primary md-raised" >Edit</md-button>
-          <md-button>Action 2</md-button>
         </md-card-actions>
       </md-card>
 </div>
 <div>
-
-<div ng-if="dossierDetails.dateWarn()"> Yes </div>
-
+    <div ng-show="dossierDetails.eventsY.length > 0" style="background-color:rgba(0,255,0,0.1);">
       <label>Confirmed</label>
         <div ng-repeat="event in dossierDetails.eventsY">
         <p> · · · · · · · · · · · · · · · · · · · · </p>
@@ -38,25 +35,35 @@
         <p> {{event.date | date: "EEEE, MMMM d, y @ h:mm:ss a"}} </p>
         <p ng-if="dossierDetails.dateWarn(event.date) > 1"> {{dossierDetails.dateWarn(event.date)}} Days until the event</p>
         <p ng-if="dossierDetails.dateWarn(event.date) == 1"> The event is today!</p>
-        <p> <event-rsvp event="event" ></event-rsvp> </p>
+        <p ng-if="dossierDetails.dateWarn(event.date) < 1"> The event has passed</p>
+        <p ng-show="dossierDetails.isUser()"> <event-rsvp event="event" ></event-rsvp> </p>
         </div>
-
+    </div>
+    <div  ng-show="dossierDetails.eventsV.length > 0" style="background-color:rgba(204, 0, 204,0.1);">
       <label>Volunteered</label>
         <div ng-repeat="event in dossierDetails.eventsV">
         <p> · · · · · · · · · · · · · · · · · · · · </p>
         <p> <md-button ui-sref="eventDetails({ eventId: event._id })" >{{event.name}} </md-button></p>
         <p> {{event.description}} </p>
-        <p> {{event.date}} </p>
-        <p> <event-rsvp event="event" ></event-rsvp> </p>
+        <p> {{event.date | date: "EEEE, MMMM d, y @ h:mm:ss a"}} </p>
+        <p ng-if="dossierDetails.dateWarn(event.date) > 1"> {{dossierDetails.dateWarn(event.date)}} Days until the event</p>
+        <p ng-if="dossierDetails.dateWarn(event.date) == 1"> The event is today!</p>
+        <p ng-if="dossierDetails.dateWarn(event.date) < 1"> The event has passed</p>
+        <p ng-show="dossierDetails.isUser()"> <event-rsvp event="event" ></event-rsvp> </p>
         </div>
-
+    </div>
+    <div  ng-show="dossierDetails.eventsC.length > 0" style="background-color:rgba(255,0,0,0.1);">
       <label>Cancelled</label>
         <div ng-repeat="event in dossierDetails.eventsC">
         <p> · · · · · · · · · · · · · · · · · · · · </p>
         <p> <md-button ui-sref="eventDetails({ eventId: event._id })" >{{event.name}} </md-button></p>
         <p> {{event.description}} </p>
-        <p> {{event.date}} </p>
-        <p> <event-rsvp event="event" ></event-rsvp> </p>
+        <p> {{event.date | date: "EEEE, MMMM d, y @ h:mm:ss a"}} </p>
+        <p ng-if="dossierDetails.dateWarn(event.date) > 1"> {{dossierDetails.dateWarn(event.date)}} Days until the event</p>
+        <p ng-if="dossierDetails.dateWarn(event.date) == 1"> The event is today!</p>
+        <p ng-if="dossierDetails.dateWarn(event.date) < 1"> The event has passed</p>
+        <p ng-show="dossierDetails.isUser()"> <event-rsvp event="event" ></event-rsvp> </p>
         </div>
+    </div>
  </div>
 
