--- a/imports/ui/dossier_components/dossiersList/web.html
+++ b/imports/ui/dossier_components/dossiersList/web.html
@@ -1,5 +1,4 @@
 <div layout="column" layout-padding>
-  <dossier-add-button ng-show="dossiersList.isLoggedIn"></dossier-add-button>
 
 
 
@@ -21,7 +20,7 @@
     </md-input-container>
   </div>
 
-<div layout="column" layout-gt-sm="row">
+<div layout="column" layout-gt-sm="row" class='datagrid'>
   <table>
     <thead></thead>
     <tbody>
@@ -33,7 +32,7 @@
       </tr>  
 
       <tr ng-repeat="user in dossiersList.users">
-        <td> {{user._id}} </td>
+        <td ui-sref="dossierDetails({ userId: user._id })"> {{user._id}} </td>
         <td> {{user.auth.auth}} </td>
         <td> {{user.auth.note}} </td>
         <td> {{user.emails[0].address}} </td>
@@ -55,4 +54,3 @@
   </table>
   </div>
 
-<div style="height:300px">HI</div>
