--- a/imports/ui/event_components/eventsDb/eventModifyModal.html
+++ b/imports/ui/event_components/eventsDb/eventModifyModal.html
@@ -1,7 +1,7 @@
 <md-dialog aria-label="New event" ng-cloak>
   <md-toolbar>
     <div class="md-toolbar-tools">
-      <h2>New event</h2>
+      <h2>Edit event</h2>
       <span flex></span>
       <md-button ng-click="eventModifyModal.close()">
         Close
