--- a/imports/ui/event_components/eventAdd/eventAdd.html
+++ b/imports/ui/event_components/eventAdd/eventAdd.html
@@ -110,7 +110,11 @@ $('#datepick').daterangepicker({
     <label>
       Chapter:
     </label>
-    <input type="text" ng-model="eventAdd.event.chapter"/>
+    <md-select ng-model="eventAdd.event.chapter_id" md-selected-text='eventAdd.getSelected()'>
+      <md-optgroup label={{chapter.state}} ng-repeat='chapter in eventAdd.chapters'>
+        <md-option ng-value='chapter._id' ng-repeat='chapter in eventAdd.chapters | filter: {state: chapter.state}' > {{chapter.location}} </md-option>
+      </md-optgroup>
+    </md-select>
   </md-input-container>
   <div>
     <event-upload files="eventAdd.event.images"></event-upload>
