--- a/imports/ui/event_components/eventCreator/eventCreator.html
+++ b/imports/ui/event_components/eventCreator/eventCreator.html
@@ -1,5 +1,5 @@
 <p>
   <small>
-    Posted by {{ eventCreator.creator | displayNameFilter }}
+    Created by {{ eventCreator.creator | displayNameFilter }}
   </small>
 </p>
