--- a/imports/ui/inventory_components/inventoriesList/mobile.html
+++ b/imports/ui/inventory_components/inventoriesList/mobile.html
@@ -9,13 +9,17 @@
           <p>
             {{inventory.description}}
           </p>
+
+          <p>
+            {{inventory.chapter}}
+          </p>
         </div>
 
-        <div class="item item-image">
+        <!--<div class="item item-image">
           <inventory-image images="inventory.images"></inventory-image>
-        </div>
+        </div>-->
 
-        <inventory-rsvps-list class="item" rsvps="inventory.rsvps"></inventory-rsvps-list>
+        <!--<inventory-rsvps-list class="item" rsvps="inventory.rsvps"></inventory-rsvps-list>-->
       </div>
     </div>
   </ion-content>
