--- a/imports/ui/inventory_components/inventoriesDb/inventoryModifyModal.html
+++ b/imports/ui/inventory_components/inventoriesDb/inventoryModifyModal.html
@@ -1,7 +1,7 @@
 <md-dialog aria-label="New inventory" ng-cloak>
   <md-toolbar>
     <div class="md-toolbar-tools">
-      <h2>New inventory</h2>
+      <h2>Edit inventory</h2>
       <span flex></span>
       <md-button ng-click="inventoryModifyModal.close()">
         Close
