--- a/imports/ui/inventory_components/inventoryModify/inventoryModify.html
+++ b/imports/ui/inventory_components/inventoryModify/inventoryModify.html
@@ -1,126 +1,32 @@
-<script>
-$('#datepick').daterangepicker({
-    "singleDatePicker": true,
-    "timePicker": true,
-    "timePicker24Hour": true,
-    "linkedCalendars": false,
-    "locale": {
-        "format": "dddd MMMM DD, h:mm",
-        "separator": " - ",
-        "applyLabel": "Apply",
-        "cancelLabel": "Cancel",
-        "fromLabel": "From",
-        "toLabel": "To",
-        "customRangeLabel": "Custom",
-        "weekLabel": "W",
-        "daysOfWeek": [
-            "Su",
-            "Mo",
-            "Tu",
-            "We",
-            "Th",
-            "Fr",
-            "Sa"
-        ],
-        "monthNames": [
-            "January",
-            "February",
-            "March",
-            "April",
-            "May",
-            "June",
-            "July",
-            "August",
-            "September",
-            "October",
-            "November",
-            "December"
-        ],
-        "firstDay": 1
-    },
-    "opens": "center"
-}, function(start, end, label) {
-  console.log("New date range selected: ' + start.format('EEEE MMMM d, h:mm') + ' to ' + end.format('YYYY-MM-DD') + ' (predefined range: ' + label + ')");
-});
-</script>
-
 
 <div layout="column" layout-padding>
   <md-input-container>
     <label>
-      Inventory Name:
+     Name:
     </label>
-    <input type="text" ng-model="inventoryModify.inventory.name"/>
+    <input type="text" ng-model="inventoryModify.inventoryModify.name"/>
   </md-input-container>
   <div style="height:100px">
-    <label>
-    <!-- need to get a datepicker module from atmosphere -->
-      Date:
-    </label>
-    <md-datepicker ng-model="inventoryModify.inventory.date" md-placeholder="Enter date"></md-datepicker>
-  </div>
-  <md-input-container>
-    <label>
-      Time:
-    </label>
-    <input type="time" ng-model="inventoryModify.inventory.time"/>
-  </md-input-container>
   <md-input-container>
     <label>
       Description:
     </label>
-    <input type="text" ng-model="inventoryModify.inventory.description"/>
+    <input type="text" ng-model="inventoryModifyModify.inventoryModify.description"/>
   </md-input-container>
-    <md-input-container>
-    <label>
-      Address:
-    </label>
-    <input type="text" ng-model="inventoryModify.inventory.address"/>
-  </md-input-container>
-    <md-input-container>
-    <label>
-      Resources:
-    </label>
-    <input type="text" ng-model="inventoryModify.inventory.resources"/>
-  </md-input-container>
-    <md-input-container>
-    <label>
-      Volunteers:
-    </label>
-    <input type="text" ng-model="inventoryModify.inventory.volunteers"/>
-  </md-input-container>
-    <md-input-container>
-    <label>
-      Organizer:
-    </label>
-    <input type="text" ng-model="inventoryModify.inventory.organizer"/>
-  </md-input-container>
-    <md-input-container>
-    <label>
-      Attendants:
-    </label>
-    <input type="text" ng-model="inventoryModify.inventory.attendants"/>
-  </md-input-container>
-      <md-input-container>
+    
+  <md-input-container>
     <label>
       Chapter:
     </label>
-    <input type="text" ng-model="inventoryModify.inventory.chapter"/>
+    <input type="text" ng-model="inventoryModifyModify.inventoryModify.chapter"/>
   </md-input-container>
   <div>
-    <inventory-upload files="inventoryModify.inventory.images"></inventory-upload>
-    <md-card-title-media ng-if="inventoryModify.inventory.images">
+    <inventoryModify-upload files="inventoryModifyModify.inventoryModify.images"></inventoryModify-upload>
+    <md-card-title-media ng-if="inventoryModifyModify.inventoryModify.images">
             <div class="md-media-lg card-media">
-              <inventory-image images="inventoryModify.inventory.images"></inventory-image>
+              <inventoryModify-image images="inventoryModifyModify.inventoryModify.images"></inventoryModify-image>
             </div>
     </md-card-title-media>
   </div>
-  <div>
-    <label>
-      Location:
-    </label>
-    <div> {{inventoryModify.inventory.location}} </div>
-  </div>
-  
-    <md-button ng-click="inventoryModify.save()" class="md-raised">Save Changes</md-button>
+    <md-button ng-click="inventoryModifyModify.getlocation(inventoryModifyModify.inventoryModify)" class="md-raised">Save Changes</md-button>
 </div>
