--- a/imports/ui/inventory_components/inventoryModify/inventoryModify.html
+++ b/imports/ui/inventory_components/inventoryModify/inventoryModify.html
@@ -11,22 +11,22 @@
     <label>
       Description:
     </label>
-    <input type="text" ng-model="inventoryModifyModify.inventoryModify.description"/>
+    <input type="text" ng-model="inventoryModify.inventoryModify.description"/>
   </md-input-container>
     
   <md-input-container>
     <label>
       Chapter:
     </label>
-    <input type="text" ng-model="inventoryModifyModify.inventoryModify.chapter"/>
+    <input type="text" ng-model="inventoryModify.inventoryModify.chapter"/>
   </md-input-container>
   <div>
-    <inventoryModify-upload files="inventoryModifyModify.inventoryModify.images"></inventoryModify-upload>
-    <md-card-title-media ng-if="inventoryModifyModify.inventoryModify.images">
+    <inventoryModify-upload files="inventoryModify.inventoryModify.images"></inventoryModify-upload>
+    <md-card-title-media ng-if="inventoryModify.inventoryModify.images">
             <div class="md-media-lg card-media">
-              <inventoryModify-image images="inventoryModifyModify.inventoryModify.images"></inventoryModify-image>
+              <inventoryModify-image images="inventoryModify.inventoryModify.images"></inventoryModify-image>
             </div>
     </md-card-title-media>
   </div>
-    <md-button ng-click="inventoryModifyModify.getlocation(inventoryModifyModify.inventoryModify)" class="md-raised">Save Changes</md-button>
+    <md-button ng-click="inventoryModify.getlocation(inventoryModify.inventory)" class="md-raised">Save Changes</md-button>
 </div>
