Feat: New Splash
Revamped splash page

--- a/imports/ui/splash_components/adminIndex/web.html
+++ b/imports/ui/splash_components/adminIndex/web.html
@@ -14,6 +14,12 @@
           <div class="spacer" style="height: 100px;"></div>
         </md-content>
       </md-tab>
+      <md-tab label="Inventory">
+        <md-content class="md-padding">
+          <inventories-db></inventories-db>
+          <div class="spacer" style="height: 100px;"></div>
+        </md-content>
+      </md-tab>
       <md-tab label="Donations">
         <md-content class="md-padding">
           <h1 class="md-display-2">Donations</h1>
